# Btrvol

./: .gitignore  BtrVol.sln  README.md  README.zh.md  auto-py-to-exe.json  btrvolcli.py  btrvolgui.py  btrvolgui.ui  build.bat  noxfile.py  pygubu-designer.bat  pyproject.toml  readme.md  readme.zh.md  requirements.txt  setup.cfg
BtrVol/: BtrVol.csproj  BtrVolForm.Designer.cs  BtrVolForm.cs  BtrVolForm.resx  Form1.Designer.cs  Form1.cs  Program.cs  VolumeContrlFormulaInv.cs
btrvol/: __init__.py  btrvolcli.py  btrvolgui.py  btrvolgui.ui  formulas.py  selectors.py  utilities.py  volume_control_test.py
btrvol/awthemes/: __init__.py
btrvol/btrvollib/: btrvol.py  configuration.py  configuration_test.py  selectors.py  utilities.py  utilities_test.py  volume_control.py  volume_control_test.py
btrvol/resources/: convent.bat
docs/: dev_notes.md  wireframe.epgz
src/btrvol/: __init__.py
src/btrvol/cli/: cli.py
src/btrvol/core/: btrvol.py  volume_control.py
src/btrvol/gui/: __init__.py  __main__.py  chart_canvas.py  main.py  main.ui  utilities.py  widgets.py
tests/: test_btrvol.py  test_clamp.py  test_volume_control.py  try_btrvol.py
